--- a/src/main/resources/templates/employers/add.html
+++ b/src/main/resources/templates/employers/add.html
@@ -8,14 +8,16 @@
 
 <form method="post" style="max-width:600px;">
     <div class="form-group">
-        <label th:for="name">Employer Name</label>
-        <input class="form-control" th:field="${employer.name}" />
+        <label th:for="name">Employer Name
+            <input class="form-control" th:field="${employer.name}" />
+        </label>
         <span th:errors="${employer.name}" class="error"></span>
     </div>
 
     <div class="form-group">
-        <label th:for="location">Employer Location</label>
-        <input class="form-control" th:field="${employer.location}" />
+        <label th:for="location">Employer Location
+            <input class="form-control" th:field="${employer.location}" />
+        </label>
         <span th:errors="${employer.location}" class="error"></span>
     </div>
 
